Actualizar contenido y estilos en componentes de la aplicación

--- a/Save&Serve/src/app/components/footer-component/footer-component.component.html
+++ b/Save&Serve/src/app/components/footer-component/footer-component.component.html
@@ -13,8 +13,13 @@
         <p>En 2023, Save & Serve redistribuyó <strong>500 toneladas</strong> de alimentos, ayudando a más de
           <strong>10,000 personas</strong>.
         </p>
-        <p class="mb-0">Comprometidos con el <a href="https://sdgs.un.org/goals"
+        <p class="mb-0">Comprometidos con:</p>
+        <p class="mb-0"><a href="https://sdgs.un.org/goals/goal2"
             class="text-warning text-decoration-underline hover-underline-animation">ODS 2: Hambre Cero</a>.</p>
+            <p class="mb-0"><a href="https://sdgs.un.org/goals/goal9"
+              class="text-warning text-decoration-underline hover-underline-animation">ODS 9: Industria, innovación e infraestructura</a>.</p>
+              <p class="mb-0"> <a href="https://sdgs.un.org/goals/goal12"
+                class="text-warning text-decoration-underline hover-underline-animation">ODS 12: Producción y Consumo Responsable</a>.</p>
       </div>
 
       <div class="col-sm-12 col-md-6 mb-4">
@@ -52,8 +57,8 @@
 
       <div class="col-sm-12 col-md-6 mb-4">
         <h5>Certificaciones y Alianzas</h5>
-        <img src="https://sdgs.un.org/themes/custom/porto/assets/images/logo-en.svg" alt="Socio 1"
-          class="img-fluid me-2 " width="80">
+        <!-- <img src="https://sdgs.un.org/themes/custom/porto/assets/images/logo-en.svg" alt="Socio 1"
+          class="img-fluid me-2 " width="80"> -->
         <img src="https://www.sgs.es/es-es/campaigns/-/media/570672b4495d4dc584f7fff4b8e3a4a4.ashx?la=es-es"
           alt="Socio 2" class="img-fluid" width="80">
         <h5 class="mt-3">Licencias</h5>
@@ -80,7 +85,7 @@
               <form>
                   <div class="mb-3">
                       <label for="name" class="form-label"> Nombre</label>
-                      <input type="text" class="form-control" id="name" placeholder="Daniel Gil" required>
+                      <input type="text" class="form-control" id="name" placeholder="Tu nombre" required>
                   </div>
                   <div class="mb-3">
                       <label for="email" class="form-label"> Correo electrónico</label>
