--- a/Save&Serve/src/app/pages/gestion-articulos/gestion-articulos.component.html
+++ b/Save&Serve/src/app/pages/gestion-articulos/gestion-articulos.component.html
@@ -163,11 +163,11 @@
                    style="max-width: 100px;">
             </td>
             <td>
-              <button class="btn btn-sm btn-primary me-2" 
+              <button class="btn btn-sm btn-warning w-100 mb-2 text-light" 
                       (click)="editarArticulo(articulo)">
                 Editar
               </button>
-              <button class="btn btn-sm btn-danger"
+              <button class="btn btn-sm btn-danger w-100"
                       (click)="eliminarArticulo(articulo.idArticulo!)">
                 Eliminar
               </button>
