--- a/Save&Serve/src/app/pages/index/index.component.html
+++ b/Save&Serve/src/app/pages/index/index.component.html
@@ -1,7 +1,7 @@
 <app-herosection-component></app-herosection-component>
 <app-howworks-component></app-howworks-component>
 <app-carousel></app-carousel>
-<app-feature></app-feature>
+<!-- <app-feature></app-feature> -->
 <app-stadistic></app-stadistic>
 <app-impact></app-impact>
 <app-accordion></app-accordion>
