--- a/Save&Serve/src/app/pages/zona-admin/zona-admin.component.html
+++ b/Save&Serve/src/app/pages/zona-admin/zona-admin.component.html
@@ -4,7 +4,7 @@
         <div class="container mt-5 mb-5">
             <div class="row row-cols-2 g-3">
                 <div class="col">
-                    <button class="btn btn-primary w-100 p-4" routerLink="/gestionArticulos"
+                    <button class="btn btn-info w-100 p-4 text-light" routerLink="/gestionArticulos"
                         routerLinkActive="active">Artículos</button>
                 </div>
                 <div class="col">
@@ -12,12 +12,12 @@
                         routerLinkActive="active">Gestion Beneficiarios</button>
                 </div>
                 <div class="col">
-                    <button class="btn btn-primary w-100 p-4" routerLink="/gestionEmpresas"
+                    <button class="btn btn-warning w-100 p-4 text-light" routerLink="/gestionEmpresas"
                         routerLinkActive="active">Gestion Donantes</button>
                 </div>
                 <div class="col">
                     <button class="btn btn-danger w-100 p-4" routerLink="/gestionTransportes"
-                        routerLinkActive="active">Gestion Transportes</button>
+                        routerLinkActive="active">Gestion Donaciones</button>
                 </div>
             </div>
         </div>
