--- a/Save&Serve/src/app/components/navbar-component/navbar-component.component.html
+++ b/Save&Serve/src/app/components/navbar-component/navbar-component.component.html
@@ -14,9 +14,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#cardAndButton">Como trabajamos?</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/articles" routerLinkActive="active">Blog</a>
                     </li>
